--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-fastapi
-uvicorn
-pydantic
-pydantic-settings
-python-dotenv
-python-multipart
-httpx
-pillow
-asyncio
+fastapi>=0.115.0
+uvicorn>=0.32.0
+pydantic>=2.10.0
+pydantic-settings>=2.6.0
+httpx>=0.28.0
+pillow>=11.0.0
+python-multipart>=0.0.18
+torch>=2.5.0
+transformers>=4.47.0
+qwen-vl-utils>=0.0.8
+accelerate>=1.2.0
