--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-multipart>=0.0.22",
     "qwen-vl-utils>=0.0.14",
     "torch>=2.9.1",
+    "torchvision>=0.24.1",
     "transformers>=4.57.6",
     "uvicorn>=0.40.0",
 ]
