Add Gemini engine, JSONL batch endpoint, and simplify to Markdown-only output
- Add GeminiEngine with concurrent batch processing (semaphore-limited)
- New /batch/jsonl endpoint: up to 100 images with tracking IDs
- Remove HTML/JSON output formats, keep Markdown only
- Standardize all config variables to UPPERCASE
- Simplify startup to single engine per instance
- Add request/response logging throughout
- Fix null checks in AIService and vLLM response parsing
- Update README with architecture diagram and API examples

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,33 @@
-# Backend: "transformers" (default, CPU/GPU) or "vllm" (GPU only, faster)
-OCR_DOLPHIN_BACKEND=transformers
+# =============================================================================
+# OCR Service Configuration
+# All variables are prefixed with OCR_
+# =============================================================================
 
-# Model name or path
-OCR_DOLPHIN_MODEL=ByteDance/Dolphin-v2
+# CORE SETTINGS
+# -----------------------------------------------------------------------------
+# DEFAULT_ENGINE: Which OCR engine to use
+#   - "dolphin" : Local model (ByteDance/Dolphin-v2), requires GPU for speed
+#   - "gemini"  : Google Gemini API, requires GOOGLE_API_KEY
+OCR_DEFAULT_ENGINE=dolphin
 
-# vLLM endpoint (only needed if OCR_DOLPHIN_BACKEND=vllm)
-OCR_DOLPHIN_VLLM_URL=http://localhost:8000/v1
+# Optional API key for authenticating requests to this service
+# OCR_API_KEY=your-secret-key
 
 # Request timeout in seconds
 OCR_REQUEST_TIMEOUT=300
 
-# Optional API key for authentication
-# OCR_API_KEY=your-secret-key
+# DOLPHIN ENGINE (Local Model)
+# -----------------------------------------------------------------------------
+# Backend: "transformers" (CPU/GPU) or "vllm" (GPU only, faster)
+OCR_DOLPHIN_BACKEND=transformers
+OCR_DOLPHIN_MODEL=ByteDance/Dolphin-v2
+# vLLM URL (only needed if DOLPHIN_BACKEND=vllm)
+OCR_DOLPHIN_VLLM_URL=http://localhost:8000/v1
+
+# GEMINI ENGINE (Google API)
+# -----------------------------------------------------------------------------
+# Required when DEFAULT_ENGINE=gemini
+OCR_GOOGLE_API_KEY=
+OCR_GEMINI_MODEL=gemini-2.5-flash
+# Max concurrent API calls for batch processing
+OCR_GEMINI_MAX_CONCURRENT=10
