--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "accelerate>=1.12.0",
     "fastapi>=0.129.0",
+    "google-genai>=1.63.0",
     "httpx>=0.28.1",
     "pillow>=12.1.1",
     "pydantic>=2.12.5",
@@ -14,6 +15,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
     "qwen-vl-utils>=0.0.14",
+    "tenacity>=9.1.4",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
     "transformers>=4.57.6",
